# sra-submission-tools

./: .gitignore  LICENSE  Metagenome.environmental.1.0.xlsx  README.md  __init__.py  aspera.openssh  check_missing_nicu_files.py  clean_nicu_metadata.py  config.json  config_template_optimized.json  dbh_config.json  fix_dates.py  generate_nicu_file_list.py  hellman_metadata.csv  hellman_metadata.xlsx  hellman_metadata2.csv  hellman_submission.py  metadata-template.csv  pyproject.toml  run_kodanda_validation.py  sra_submission.py  test_script.txt  test_validation.py  validate_kodanda_simple.py  validate_nicu_cleaned.py
archive/: fix_nicu_metadata.py  test_date_validation.py  validate_kodanda_direct.py
hellman_sra_submission/: sra_metadata.csv
metadata_files/: Alenghat_metadata.xlsx  IBDSequencedSamplesNew.csv  Metagenome.environmental.1.0.xlsx  NICU-bioproject-metadata.txt  NICU-sample-metadata.txt  NICU_metadata_20211201.csv  NICU_metadata_20211201.xlsx  SRA_metadata.xlsx  SRA_project_metadata.csv  SRA_project_metadata.xlsx  Theresa_Metadata2.xlsx  UCNICU_metadata.csv  ViromicsSamples.csv  Viromics_Metadata_Project.txt  Viromics_Metadata_Project.xlsx  geiger_bioproject_metadata.txt  geiger_metadata.xlsx  geiger_sample_metadata.csv  geiger_sample_metadata.txt  geiger_sample_metadata.xlsx  hellman-bioproject-metadata.txt  hellman-bioproject-metadata1-fixed.txt  hellman-bioproject-metadata1.txt  hellman-bioproject-metadata2.txt  hellman-sample-metadata.txt  hellman-sample-metadata2.txt  hellman_metadata.xlsx  hellman_metadata2.xlsx  kodanda-bioproject-metadata.txt  (+5 more)
(+29 files in other folders)
