[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[project]
name = "sra-metagenome-submission"
version = "0.1.0"
description = "Tools to automate metagenomic data submission to NCBI's Sequence Read Archive (SRA)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "metagenomics", "SRA", "NCBI", "submission"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.0.0",
    "requests>=2.25.0",
    "openpyxl>=3.0.0",  # For Excel file support
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sra-metagenome-submission"
"Bug Tracker" = "https://github.com/yourusername/sra-metagenome-submission/issues"
"Documentation" = "https://github.com/yourusername/sra-metagenome-submission#readme"

[project.scripts]
sra-submit = "sra_metagenome_submission.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sra_metagenome_submission"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sra_metagenome_submission",
    "README.md",
    "LICENSE",
]